# rep

./: .gitignore  pyproject.toml
databento/: check.py  combine_full_day_parquet.py  convert_to_parquet.py  databento_auth.py  download.py  verify_databento_full_day_integrity.py
notebooks/: check_data.ipynb  deeplob_forward_return.ipynb  inspect_pipeline.ipynb  order_book_viewer.ipynb  precomputed_lars_forward_return.ipynb  precomputed_mlp_forward_return.ipynb  precomputed_xgboost_forward_return.ipynb  single_day_feature_distributions.ipynb  streaming_lars_forward_return.ipynb  streaming_mlp_forward_return.ipynb  streaming_xgboost_forward_return.ipynb
notebooks/.ipynb_checkpoints/: single_day_feature_distributions-checkpoint.ipynb  streaming_lars_forward_return-checkpoint.ipynb
notebooks/dump/: registry.jsonl
notebooks/dump/model/: model_180683e4.ubj  model_66439996.ubj
notebooks/dump/pipeline_20260703T1430_66439996/: history.json  pipeline.json
notebooks/dump/pipeline_20260703T2233_180683e4/: history.json  pipeline.json
notebooks/dump/pipeline_20260704T1125_11ef951e/: history.json  pipeline.json
notebooks/dump/pipeline_20260707T2000_a3fc5c5a/: history.json  pipeline.json
notebooks/dump/transform/: transform_11ef951e.pkl
scripts/: validate_book_reference.py
tools/: buffered.py  data.py  deeplob.py  feature_plugin.py  features.py  features_recipe.py  filters.py  lob_viewer.py  model.py  orderbook.py  pipeline.py  precision.py  price.py  registry.py  score.py  search.py  track.py  transform.py  viewer.py  window.py
tools/feature_rs/: Cargo.toml
tools/feature_rs/src/: lib.rs
tools/orderbook_rs/: Cargo.toml
(+3 files in other folders)
