[project]
name = "rep"
version = "0.1.0"
description = "Download CME ES/NQ MBO data from Databento"
requires-python = ">=3.10"
dependencies = [
    "databento>=0.57.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "ray[data,train]>=2.55.1",
    "torch>=2.12.1",
    "polars>=1.41.2",
    "exchange-calendars>=4.13.2",
]

[tool.uv]
package = false
