[project]
name = "rep"
version = "0.1.0"
description = "Download CME ES/NQ MBO data from Databento"
requires-python = ">=3.10"
dependencies = [
    "databento>=0.57.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "ray[data,train]>=2.55.1",
    "torch>=2.12.1",
    "polars>=1.41.2",
    "exchange-calendars>=4.13.2",
    "optuna>=4.9.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.7.2",
    "wandb>=0.28.0",
    "matplotlib>=3.10.9",
    "cupy-cuda12x>=14.1.1",
    "plotly>=6.8.0",
    "anywidget>=0.11.0",
    "shap>=0.49.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter-resource-usage>=1.2.1",
    "jupyterlab>=4.6.0",
    "jupyterlab-execute-time>=3.3.0",
]
